[build-system]
requires = ["uv", "hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel.shared-data]
# "renardo/lib/README.md" = "."
# "renardo/lib/demo" = "renardo/lib/demo"
# "renardo/lib/SynthDefManagement/sclang_code" = "renardo/lib/SynthDefManagement/sclang_code"

[tool.hatch.build.targets.wheel.force-include]
"webclient/dist" = "renardo/webserver/static"

[tool.hatch.build.targets.app]
# scripts = ["renardo/__main__.py"]
pyapp-version = "0.27.0"


[project]
name = "renardo"
version = "1.0.0.dev23"
description = "Python livecoding environment - New fork of FoxDot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Elie Gavoty", email = "eliegavoty@free.fr"}
]
license = {text = "GPL-3.0"}
dependencies = [
    "midiutil",
    "tomli",
    "tomli-w",
    "requests",
    "psutil",
    "indexed",
    "python-rtmidi",
    "ttkbootstrap",
    "textual < 3",
    "fastnumbers>=5.1.1",
    "mido>=1.3.3",
    "flask>=3.1.0",
    "flask-sock>=0.7.0",
    "flask-cors>=3.0.10",
    "websockets>=10.4",
    "gunicorn",
    "gevent",
    "gevent-websocket",
    "renardo-reapy==0.11.0.dev6",
    "python-reapy>=0.10.0",
]

[project.scripts]
renardo = "renardo:main"

[project.urls]
Homepage = "http://renardo.org/"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "pip>=25.1.1",
    "pytest>=8.3.5",
]

