[build-system]
requires = ["uv", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"webclient/dist" = "renardo/webserver/static"

[tool.hatch.build.targets.app]
pyapp-version = "0.27.0"


[project]
name = "renardo"
version = "1.0.0a4"
description = "Python livecoding environment - New fork of FoxDot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Elie Gavoty", email = "eliegavoty@free.fr"}
]
license = {text = "GPL-3.0"}
dependencies = [
    "midiutil",
    "tomli",
    "tomli-w",
    "requests",
    "psutil",
    "indexed",
    "python-rtmidi",
    "ttkbootstrap",
    "textual < 3",
    "fastnumbers>=5.1.1",
    "mido>=1.3.3",
    "flask>=3.1.0",
    "flask-sock>=0.7.0",
    "flask-cors>=3.0.10",
    "websockets>=10.4",
    "gunicorn",
    "gevent",
    "gevent-websocket",
    "markdown>=3.5.1",
    "python-reapy>=0.10.0",
]

[project.scripts]
renardo = "renardo:main"

[project.urls]
Homepage = "http://renardo.org/"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "ipython>=8.18.1",
    "pip>=25.1.1",
    "pytest>=8.3.5",
]

