[build-system]
requires = ["uv", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"webclient/dist" = "renardo/webserver/static"

[tool.hatch.build.targets.app]
pyapp-version = "0.27.0"


[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[project]
name = "renardo"
dynamic = ["version"]
description = "Python livecoding environment - New fork of FoxDot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Elie Gavoty", email = "eliegavoty@free.fr"}
]
license = {text = "GPL-3.0"}
dependencies = [
    "midiutil",
    "tomli",
    "tomli-w",
    "requests",
    "psutil",
    "indexed",
    "python-rtmidi",
    "ttkbootstrap",
    "fastnumbers>=5.1.1",
    "mido>=1.3.3",
    "websockets>=10.4",
    "markdown>=3.5.1",
    "python-osc>=1.8.3",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "diskcache>=5.6.3",
    "pylive>=0.2.0",
    "LinkPython-extern>=1.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
renardo = "renardo.cli_entrypoint:main"

[project.urls]
Homepage = "http://renardo.org/"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "ipython>=8.18.1",
    "pip>=25.1.1",
    "pytest>=8.3.5",
]

