[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renardo-gatherer"
dynamic = ["version"]
description = 'Asset manager (samples packs, synthdefs, code examples, presets, etc) for Renardo Python livecoding environment'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = ['music', 'livecoding', 'algorave']
authors = [
  { name = "Elie Gavoty", email = "mail@eliegavoty.fr" },
]

dependencies = [
  'requests',
  'indexed',
]

[project.urls]
Documentation = "https://github.com/e-lie/renardo/renardo-gatherer/README.md"
Issues = "https://github.com/e-lie/renardo/issues"
Source = "https://github.com/e-lie/renardo/renardo-gatherer"

[tool.hatch.version]
path = "src/renardo_gatherer/__about__.py"