[package]
name = "renardo-reaper-ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "renardo_reaper_ext"
crate-type = ["cdylib"]

[dependencies]
rosc = "0.10"  # OSC library
once_cell = "1.19"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
